--- a/ComputerVisionProject.ipynb
+++ b/ComputerVisionProject.ipynb
@@ -295,6 +295,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Import YOLO model"
+      ],
+      "metadata": {
+        "id": "Gis2781Wq68p"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "%pip install ultralytics\n",
@@ -330,37 +339,6 @@
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import sys, platform, torch, os, subprocess\n",
-        "\n",
-        "print(\"Python exe:\", sys.executable)\n",
-        "print(\"Python ver:\", sys.version)\n",
-        "print(\"Platform:\", platform.platform())\n",
-        "print(\"CUDA seen by torch BEFORE reinstall:\", torch.cuda.is_available() if 'torch' in globals() else 'torch not imported')\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Ps2xkUQ0kMnk",
-        "outputId": "e75ff7df-3cba-4dfe-835b-5901ccf3c516"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Python exe: C:\\Users\\User\\AppData\\Local\\Programs\\Python\\Python311\\python.exe\n",
-            "Python ver: 3.11.0 (main, Oct 24 2022, 18:26:48) [MSC v.1933 64 bit (AMD64)]\n",
-            "Platform: Windows-10-10.0.26100-SP0\n",
-            "CUDA seen by torch BEFORE reinstall: True\n"
-          ]
-        }
-      ]
     },
     {
       "cell_type": "markdown",
@@ -1895,7 +1873,7 @@
     {
       "cell_type": "code",
       "source": [
-        "metrics = model.val()  # no arguments needed, dataset and settings remembered\n",
+        "metrics = model.val()\n",
         "metrics.box.map    # map50-95\n",
         "metrics.box.map50  # map50\n",
         "metrics.box.map75  # map75\n",
